--- a/index.html
+++ b/index.html
@@ -3,34 +3,62 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="stylesheet" type="text/css" href="style.css">
   
   <title>Frontend Mentor | Article preview component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
-<body>
+  <body>
 
-  Shift the overall look and feel by adding these wonderful 
-  touches to furniture in your home
-
-  Ever been in a room and felt like something was missing? Perhaps 
-  it felt slightly bare and uninviting. I’ve got some simple tips 
-  to help you make any room feel complete.
-
-  Michelle Appleton
-  28 Jun 2020
-
-  Share
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+    <article class="article">
+      <div class="img" title="picture">
+        
+      </div>
+      <div class="text">
+        <header>
+          <h1>
+            Shift the overall look and feel by adding these wonderful touches to furniture in your home
+          </h1>
+        </header>
+        <p class="paragraph">
+          Ever been in a room and felt like something was missing? Perhaps
+          it felt slightly bare and uninviting. I’ve got some simple tips
+          to help you make any room feel complete.
+        </p>
+        <footer>
+          <div class="footer" id="footer">
+            <div id="info" class="info"> <!--INFO-->
+              <div class="img-box">
+                <img src="images/avatar-michelle.jpg" alt="">
+              </div>
+              <span class="information">
+                <p><strong>Michelle Appleton</strong></p>
+                <p>28 Jun 2020</p>
+              </span>
+            </div>
+            <div id="share" class="share"> <!--SHARE-->
+              <ul role="list" class="icons">
+                <li><span class="txt">share</span></li>
+                <li>
+                  <a class="fc" title="facebook" href="https://www.facebook.com/frontendmentor"></a>
+                </li>
+                <li>
+                  <a class="tw" title="twitter" href="https://twitter.com/frontendmentor"></a>
+                </li>
+                <li>
+                  <a class="pi" title="pinterest" href="https://tr.pinterest.com/frontendmentor"></a>
+                </li>
+              </ul>
+            </div>
+        
+            <div id="btnDiv" class="btnDiv">
+              <button class="btn-before" type="button" id="btn">share</button>
+            </div>
+          </div>
+        </footer>
+      </div>
+    </article>
+    <script src="script.js"></script>
+  </body>
 </html>
