--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <div class="footer" id="footer">
             <div id="info" class="info"> <!--INFO-->
               <div class="img-box">
-                <img src="images/avatar-michelle.jpg" alt="">
+                <img src="images/avatar-michelle.jpg" alt="author's photo">
               </div>
               <span class="information">
                 <p><strong>Michelle Appleton</strong></p>
