--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
               <div class="img-box">
                 <img src="images/avatar-michelle.jpg" alt="author's photo">
               </div>
-              <span class="information">
+              <div class="information">
                 <p><strong>Michelle Appleton</strong></p>
                 <p>28 Jun 2020</p>
-              </span>
+              </div>
             </div>
             <div id="share" class="share"> <!--SHARE-->
               <ul role="list" class="icons">
